# Onboard_VS_Streaming_RPI

./: BWSingleGStreamerPipeline.sh  Gstreamer_notes.md  ProjectNotes.md  README.md  StreamingProjectNotes.md  dualPipeline1080.sh  dualpipeline.sh  dualpipeline.sh.save  singlepipeline.sh
Archive Folder/Apply Camera Homography And Zoom To Video/: CMakeLists.txt  backup.cpp
Archive Folder/Applying Camera Calibration/: main.cpp
Archive Folder/Camera Calibration Process/: main.cpp
Archive Folder/Capture Picture/: CMakeLists.txt  main.cpp
Archive Folder/Create Calibration Patterns/: gen_pattern.py
Archive Folder/Crop Camera Feed/: CMakeLists.txt
Archive Folder/Demosaic Continious Stream RPI/: CMakeLists.txt  backup_cpp  demosaic.cpp  test.txt
Archive Folder/DynamicPicture_RPI/: BACKUP.cpp  main.cpp
Archive Folder/DynamicPicture_RPI CONTINIOUS/: main.cpp
Archive Folder/Feature Detection And Matching ORB/: CMakeLists.txt  main.cpp
Archive Folder/Hello_World_Send_Data_RPI/: main.cpp
Archive Folder/Homography/: CMakeLists.txt  main.cpp
Archive Folder/Homography With Offset NOT USED/: CMakeLists.txt  main.cpp
Archive Folder/Mock CVG ProgramBUSTER/: main.cpp
Archive Folder/Mosaic Folder/: main.cpp
Archive Folder/MultiCaptureTest/RecordMetrics/: cpu_usage.csv
Archive Folder/OnBoard Processing/: test.txt  yen_threshold.h
Archive Folder/OpenCV Homography Example/: CMakeLists.txt  homographyValues.txt  main.cpp
Archive Folder/OpenCV_GStreamer_Single_Camera_Test_RPI/: GStreamerTest_RPI  main.cpp  old.cpp  singleCameraPipeline.sh
Archive Folder/ScriptWithGPIO/: Makefile
Archive Folder/Send Single Frame/: backup_cpp  singleFrame.cpp
Archive Folder/Send Single Frame REDO/: CURRENTLY WORKS.txt  backup_cpp
Archive Folder/Send_Picture_RPI/: CMakeLists.txt  send_picture_RPI.cpp
Archive Folder/Stereo Calibration and Rectification/: CMakeLists.txt  main.cpp
Archive Folder/Testing /: CMakeLists.txt  main.cpp
Archive Folder/Thresholding /: CMakeLists.txt  main.cpp
Archive Folder/Window location/: kindaworks.py  main.py
Archive Folder/Wiring Pi Example/: main.cpp
Archive Folder/YAML Folder/Read YMAL File/: CMakeLists.txt  intrinsic.yaml  main.cpp
Archive Folder/YAML Folder/Write YAML File/: CMakeLists.txt
Archive Folder/Zoom Camera Feed /: CMakeLists.txt  backup.cpp  main.cpp
Archive Folder/Zoom Homography/: main.cpp
Archive Folder/testingFolder/: main.cpp
ArchiveFolder/Apply Camera Homography And Zoom To Video/: main.cpp
ArchiveFolder/Applying Camera Calibration/: CMakeLists.txt
ArchiveFolder/Camera Calibration Process/: CMakeLists.txt
ArchiveFolder/Crop Camera Feed/: main.cpp
ArchiveFolder/DynamicPicture_RPI/: CMakeLists.txt
ArchiveFolder/DynamicPicture_RPI CONTINIOUS/: CMakeLists.txt
ArchiveFolder/Hello_World_Send_Data_RPI/: CMakeLists.txt
ArchiveFolder/Mosaic Folder/: CMakeLists.txt
ArchiveFolder/OnBoard Processing/: CMakeLists.txt  main.cpp
ArchiveFolder/OpenCV Homography Example/: notes.md
ArchiveFolder/OpenCVGStreamerSinglePipeline/: SingleStream  testScript.sh
ArchiveFolder/OpenCV_GStreamer_Single_Camera_Test_RPI/: Makefile
ArchiveFolder/OpenCV_V4L2/: CMakeLists.txt  main.cpp
ArchiveFolder/Send Single Frame/: test.txt  with_preview.cpp
ArchiveFolder/Send Single Frame REDO/: CMakeLists.txt  singleFrame.cpp
ArchiveFolder/Stereo Calibration and Rectification/: takePicture.cpp
ArchiveFolder/Testing /: backup_cpp
ArchiveFolder/Wiring Pi Example/: CMakeLists.txt
ArchiveFolder/Zoom Camera Feed Side by Side/: backup.cpp  main.cpp
ArchiveFolder/sshTest/: test.sh
ArchiveFolder/testingFolder/: CMakeLists.txt
BWGStreamerTest/: Makefile  camera_pipeline  main.cpp
BWGStreamerTest/GStreamerSupportCaps/: main.py
GStreamer Folder/: BWSingleCameraTest.sh
GStreamer Folder/ApplyHomographyGStreamer/: main.cpp
GStreamer Folder/BasicCameraTest/: Makefile  camera_pipeline  main.cpp
GStreamer Folder/GStreamer CVG Program/: main.cpp
GStreamer Folder/GStreamer Dual Pipeline/: doubleCameraPipeline.sh
GStreamer Folder/GStreamerPipelines_BW/: BWSingleGStreamerPipeline.sh
GStreamer Folder/Homography_GStreamer/: TESThomography_matrix.yaml  homography_matrix.yaml  main.cpp
GStreamer Folder/SinglePipeline/: BWSingleCameraTest.sh
GStreamer Folder/TCP-IP_Folder_RPI/: SinglePipelineJPEGRPI.sh  SingleTCPPipelineRPI.sh  SingleTCPStream.sh  VideoSinkTestRPI.sh
GStreamer Folder/gst-testing-Videosrc/: pi-gst-send-tcp.sh
GStreamerFolder/GStreamerPipelines_BW/: notes.md
GStreamerFolder/Homography_GStreamer_BW/: CVGhomography_matrix.yaml  calculateHomography
GStreamerFolder/SingleStreamUDPRpi/: ProcessedDataFromLaptop.csv  RPIData.sh  RawDataRpiToLaptop.csv  UDPRpiPipeline.sh
GStreamerFolder/gst-testing-Videosrc/: laptop-gst-commands.sh
GStreamerPipelines/: BWDualGStreamerPipelines.sh  BWDualStreamingPipeline.sh  BWSingleGStreamerPipeline.sh  LibcamsrcGStreamerPipeline.sh  test.sh
Latency Testing Folder/LatencyGraphs/: GroupBarChartExample.py  TCP_UDP_LatencyStats.py  TotalTimeCharts.py  exportTabsAsCSVs.py  extractFileName.py  main.py
Latency Testing Folder/Record Single Camera/: Makefile  main.cpp
Latency Testing Folder/Time Stamp Extraction From Video/: Makefile  TimeStampVideo
LatencyTestingFolder/LatencyGraphs/: TCP_UDP_LatencyData.py
LatencyTestingFolder/Time Stamp Extraction From Video/: main.cpp
Mock CVG Program BW/: main.cpp
MockCVGProgramBW/: main.cpp  projectNotes.md
MultiCaptureTest/RecordMetrics/: main.cpp
MultiCaptureTest/Video Testing/: main.cpp
OpenCV GStreamer Single Pipeline/: SingleStream  main.cpp
OpenCVGStreamerSinglePipeline/: Makefile  SingleStream  bulleyesEyeSinglePipeline.sh  main.cpp  singleStreamingTestRPI.sh  testWebCam.sh
RealTimeTumorBoundarySegmentation/: notes.md
ScriptWithGPIO/: gpio_script_control  main.cpp
SingleCameraYUV420_Test/: Makefile  main.cpp
Streaming_CVG/MockCVGProgram/: main.cpp  manual_homography.yml
Window location/Linux version/: window_position
gst-testing/: pi-gst-send-tcp.sh
manualControlLaser/: manualLaserControl.py
(+109 files in other folders)
